--- a/assingment(1).ipynb
+++ b/assingment(1).ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Reading and cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -349,6 +356,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# visualise the corelation between variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -356,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x20cbfef0e80>"
+       "<seaborn.axisgrid.PairGrid at 0x1f6b17ab2b0>"
       ]
      },
      "execution_count": 4,
@@ -413,6 +427,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# features and target"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -464,9 +485,16 @@
     }
    ],
    "source": [
-    "X_train = training_df[['LPR','PEG']].to_numpy()\n",
+    "X_train = training_df[['LPR','PEG',\"STR\",\"SCG\",\"STG\"]].to_numpy()\n",
     "y_train = training_df[' UNS'].to_numpy()\n",
     "y_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# encoding the target col"
    ]
   },
   {
@@ -502,18 +530,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# selecting the 2 best features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.43168014, 30.80616533,  1.21327794,  2.60082204,  1.46536409])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import chi2\n",
+    "\n",
+    "bestfeatures = SelectKBest(score_func=chi2, k=\"all\")\n",
+    "fit = bestfeatures.fit(X_train,y_train)\n",
+    "# Features in order ['LPR','PEG',\"STR\",\"SCG\",\"STG\"]\n",
+    "# so the best two are 'LPR' and 'PEG'\n",
+    "fit.scores_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "X_train = training_df[['LPR', 'PEG']].to_numpy()\n",
     "X_test = testing_df[['LPR', 'PEG']].to_numpy()\n",
     "y_test = testing_df[' UNS'].to_numpy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +591,7 @@
        "       0, 1, 2, 1, 1, 1, 1, 1, 0, 0, 1, 2, 2])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,8 +602,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM for classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +619,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,33 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3, 1, 0, 0, 0, 1, 2, 1, 0, 3, 2, 3, 0, 2, 0, 3, 0, 3, 1, 2, 0, 1,\n",
-       "       1, 1, 2, 3, 1, 2, 2, 1, 1, 1, 2, 0, 1, 2, 1, 0, 2, 2, 3, 1, 0, 3,\n",
-       "       0, 3, 2, 2, 0, 3, 2, 3, 0, 3, 0, 3, 1, 0, 0, 0, 1, 2, 0, 1, 2, 1,\n",
-       "       2, 1, 0, 3, 0, 3, 0, 2, 1, 0, 1, 0, 0, 2, 0, 1, 3, 1, 2, 1, 0, 3,\n",
-       "       1, 0, 1, 1, 1, 3, 1, 2, 0, 1, 3, 1, 2, 1, 2, 2, 3, 1, 2, 2, 1, 0,\n",
-       "       1, 1, 3, 2, 2, 1, 0, 1, 2, 0, 0, 3, 1, 2, 3, 0, 1, 0, 3, 0, 1, 1,\n",
-       "       0, 1, 2, 1, 1, 1, 1, 1, 0, 0, 1, 2, 2])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ypred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +649,7 @@
        "0.9793103448275862"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
